word wrap fix

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -389,7 +389,6 @@ li {
 }
 
 h1,h2,h3,h4,h5,h6 {
-	white-space:nowrap;
 	span {
 		opacity: 0;
 		position: relative;
